Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn
=======================

 o 18356 2019-11-14 adrian
   ConnectReturnQos delivers now __cbQueueNumOfEntries

 o 15350 2019-09-24 michele
   Commented out resetting of xmlRpcClient since causing problems when only communication from callback to client was broken
   while communication from client to server was still ok

 o 18348 2019-08-25 marcel
   Log where xmlBlasterPlugins.xml is loaded from

 o 18346 2019-06-17 michele
   corrected error causing the counter to be reset for the replication dumper

 o 18338 2019-03-15 adrian marcel
   Incompatible change of DropIfNotDeliverable DropIfNotDeliverableUniqueOnly
   Only unsubscribe subscriptions which have declared the above plugins in AccessFilterQos
   Before: All subcriptions were unsubscribed

 o 18336,18337 2019-03-15 adrian marcel
   Added convenience methods for AccessFilter and SubscribeQos access

 o 18333-18335 2019-03-09 marcel
   htPasswd Session.java now strips pubSessionId if such is inside a securityQos.getUserId() (eg "_myService/1" -> "_myService")
   SessionName ctor now assures correct subjectId

 o 18329 2019-01-11 michele
   In the replication fixed a loop which arose when using prioDeliveryOnInitial due to the fact that low prio messages are kept in
   the holdback: it now loops at a 1000L frequency

 o 18323 2018-09-05 michele
   added the configuration property initialCmdStop to the replication to allow scripts to be executed if you interrupt the initialCmd

 o 18320 2018-08-21 michele
   fixed a bug in replication (oracle SQL functions) which caused removal of last byte for base64 encoded columns and forced to use base64 for all
   text (to avoid XML way of handling whitespaces and other special characters)

 o 18313 2018-03-22 marcel
   Extended DispatchStatistic to allow better analysis for security plugins (for pubSessionId>0 only)
